[tool.poetry]
name = "whois-api"
version = "1.2.5"
description = "whois.neonteam.cc api wrapper"
authors = ["rf0x3d <yarekfrolov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rfoxxxy/whois_api_python"
repository = "https://github.com/rfoxxxy/whois_api_python"
keywords = ["ip-api", "whois", "ip-check"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
include = ["LICENSE"]
packages = [{ include = "whois_api" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.25.0"
Brotli = "^1.1.0"
httpx-cache = "^0.13.0"
orjson = "^3.9.9"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
isort = "^5.12.0"
black = "^23.3.0"
pre-commit = "^3.3.1"
pylint = "^2.17.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-rsxX -l --tb=short"
xfail_strict = true
asyncio_mode = "auto"

[tool.isort]
profile = "black"
known_first_party = "poetry"
